attached_assets/Pasted--production-worker-Deployments-Variables-Metrics-Settin_1774446252623.txt


production



worker
Deployments
Variables
Metrics
Settings
annie.up.railway.app
us-west2
1 Replica




History



















worker

Removed
Mar 25, 2026, 5:40 PM
DetailsBuildDeployHTTPNetwork Flow
[25-Mar-26 12:14:51 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
    from ANNIEMUSIC.core.call import JARVIS
  File "/app/ANNIEMUSIC/core/call.py", line 816
                                      ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.
[notice] To update, run: pip install --upgrade pip
Removing cache dir /root/.cache/yt-dlp ..
[25-Mar-26 12:15:15 - INFO] - ANNIEMUSIC.core.mongo - Connected to your Mongo Database.
[25-Mar-26 12:15:15 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:15:15 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
[25-Mar-26 12:15:15 - INFO] - ANNIEMUSIC.core.git - Successfully updated from upstream repository.
[25-Mar-26 12:15:15 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
[25-Mar-26 12:15:16 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "/app/ANNIEMUSIC/__main__.py", line 10, in <module>
  File "/app/ANNIEMUSIC/core/call.py", line 816
    reply_markup=InlineKeyboardMarkup(button
SyntaxError: invalid syntax. Perhaps you forgot a comma?
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
[25-Mar-26 12:15:38 - INFO] - ANNIEMUSIC.core.mongo - Connected to your Mongo Database.
[25-Mar-26 12:15:38 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:15:38 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
  File "<frozen runpy>", line 198, in _run_module_as_main
    from ANNIEMUSIC.core.call import JARVIS
Removing cache dir /root/.cache/yt-dlp ..
[25-Mar-26 12:16:01 - INFO] - ANNIEMUSIC.core.mongo - Connecting to your Mongo Database...
[25-Mar-26 12:16:01 - INFO] - ANNIEMUSIC.core.mongo - Connected to your Mongo Database.
[25-Mar-26 12:16:01 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:16:01 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
[25-Mar-26 12:16:01 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
  File "/app/ANNIEMUSIC/__main__.py", line 10, in <module>
    from ANNIEMUSIC.core.call import JARVIS
SyntaxError: invalid syntax. Perhaps you forgot a comma?
[notice] To update, run: pip install --upgrade pip
[25-Mar-26 12:16:22 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:16:22 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
[25-Mar-26 12:16:22 - INFO] - ANNIEMUSIC.core.git - Successfully updated from upstream repository.
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.
Traceback (most recent call last):
  File "/app/ANNIEMUSIC/__main__.py", line 10, in <module>
    from ANNIEMUSIC.core.call import JARVIS
    reply_markup=InlineKeyboardMarkup(button
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
  File "<frozen runpy>", line 88, in _run_code
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
[25-Mar-26 12:16:44 - INFO] - ANNIEMUSIC.core.mongo - Connecting to your Mongo Database...
[25-Mar-26 12:16:44 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
[25-Mar-26 12:16:45 - INFO] - ANNIEMUSIC.misc - ᴅᴀᴛᴀʙᴀsᴇ ʟᴏᴀᴅᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ💗
[25-Mar-26 12:16:45 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
[25-Mar-26 12:16:45 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "/app/ANNIEMUSIC/__main__.py", line 10, in <module>
                                      ^^^^^^
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
[25-Mar-26 12:17:06 - INFO] - ANNIEMUSIC.core.mongo - Connecting to your Mongo Database...
[25-Mar-26 12:17:06 - INFO] - ANNIEMUSIC.core.mongo - Connected to your Mongo Database.
[25-Mar-26 12:17:06 - INFO] - ANNIEMUSIC.core.git - Git Client Found [VPS DEPLOYER]
[25-Mar-26 12:17:06 - INFO] - ANNIEMUSIC.core.git - Successfully updated from upstream repository.
[25-Mar-26 12:17:06 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
[25-Mar-26 12:17:07 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
  File "<frozen runpy>", line 88, in _run_code
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
Removing cache dir /root/.cache/yt-dlp ..
[25-Mar-26 12:17:27 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:17:27 - INFO] - ANNIEMUSIC.core.git - Successfully updated from upstream repository.
[25-Mar-26 12:17:27 - INFO] - ANNIEMUSIC.misc - ᴅᴀᴛᴀʙᴀsᴇ ʟᴏᴀᴅᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ💗
[25-Mar-26 12:17:27 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
[25-Mar-26 12:17:28 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
    reply_markup=InlineKeyboardMarkup(button
                                      ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
[notice] To update, run: pip install --upgrade pip
[25-Mar-26 12:17:50 - INFO] - ANNIEMUSIC.core.dir - Directories Updated.
[25-Mar-26 12:17:50 - INFO] - ANNIEMUSIC.core.git - Successfully updated from upstream repository.
[25-Mar-26 12:17:50 - INFO] - ANNIEMUSIC.misc - ᴅᴀᴛᴀʙᴀsᴇ ʟᴏᴀᴅᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ💗
[25-Mar-26 12:17:50 - INFO] - ANNIEMUSIC.core.bot - Bot client initialized.
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.
[25-Mar-26 12:17:50 - INFO] - ANNIEMUSIC.utils.ytdl_smart - [SmartYTDL] Node.js found: /usr/bin/node
Traceback (most recent call last):
[notice] A new release of pip is available: 25.0.1 -> 26.0.1
  File "/app/ANNIEMUSIC/__main__.py", line 10, in <module>
    from ANNIEMUSIC.core.call import JARVIS
  File "/app/ANNIEMUSIC/core/call.py", line 816
    reply_markup=InlineKeyboardMarkup(button
                                      ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
You reached the end of the range
Mar 25, 2026, 6:10 PM